# data-structure-and-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
c/: digitalConversion.c  fib.c  films1.c  main.c
cpp/algorithms/: perfectCube.cpp
