cmake_minimum_required(VERSION 3.24)
project(data_structure_and_algorithms)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp-main cpp/main.cpp)
add_executable(c-main c/main.c)
add_executable(c-fib c/fib.c)
add_executable(c-digitalConversion c/digitalConversion.c)
add_executable(cpp-perfect-cube cpp/algorithms/perfectCube.cpp)
